<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">happenStance.Me</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string name="password_text">Password</string>
    <string name="login_button">Sign In</string>
    <string name="venues">List Venues</string>
    <string name="title_activity_home">Mesiji</string>
    <string name="title_activity_register">Register</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="name_text">Name</string>
    <string name="handle_text">Alias</string>
    <string name="dob_text">Date of Birth</string>
    <string name="email_text">Email</string>
    <string name="register_button">Register</string>
    <string name="create_conversation_heading">Say Something!</string>
    <string name="create_conversation_small_heading">Say whats on your mind.</string>
    <string name="conversation_title">Conversation title</string>
    <string name="save_message_heading">Speak your mind!</string>

    <!--Menu Items-->
    <string name="refresh">refresh</string>
    <string name="signout">Sign Out</string>
    <string name="start_login">Sign In</string>
    <string name="start_register">Sign Up</string>
    <string name="register">Register</string>
    <string name="setting">Settings</string>
    <string name="register_heading">Create your Account</string>

</resources>
