<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/action_settings"
          android:title="@string/setting"
          android:orderInCategory="100"
          android:showAsAction="never"
          android:icon="@drawable/gear" />

    <item android:id="@+id/search"
          android:icon="@drawable/magnify"
          android:title="search"
          android:showAsAction="always" />

    <item android:id="@+id/refresh"
            android:title="@string/refresh"
            android:icon="@drawable/refresh"
            android:showAsAction="always" />

    <item android:id="@+id/signout"
          android:title="@string/signout"
          android:icon="@drawable/sign_out"
          android:showAsAction="always" />


</menu>