    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" 
        android:gravity="center" >

        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Mesiji"
                android:id="@+id/signInLabel"
                android:layout_gravity="center"
                android:textColor="#006868"
                android:textSize="50dp"
                android:lines="1"
                android:textAlignment="center"
                android:gravity="center_horizontal"
                android:typeface="monospace"
                android:textStyle="bold"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Connect with People"
                android:id="@+id/textView"
                android:layout_gravity="center"
                android:textSize="20dp"
                android:gravity="center_horizontal"/>

        <EditText
                style="@style/TextEditStyle"
                android:id="@+id/email_text"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"/>

        <EditText
                style="@style/TextEditStyle"
                android:id="@+id/password_text"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                />

            
        <Button
                style="@style/ButtonStyle"
                android:id="@+id/login_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_button"
                android:onClick="LoginUser"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Forgot Password"
                android:id="@+id/forgotTextView"
                android:layout_gravity="center"
                android:textSize="10dp"
                android:gravity="center_horizontal"
                />

    </LinearLayout>